2010-08-17  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed regex for item number

2010-08-01  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_result_count_pattern): fixed regexen for result count, price, date

2010-05-20  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_enddate): fixed the time-remaining regex

2009-08-30  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/BuyItNow.pm (_columns): updated for new eBay output

	* lib/WWW/Search/Ebay.pm (_parse_enddate): fixed for Buy-It-Now auctions

2009-08-10  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_price): fixed for "Free Shipping" in the bid column

2009-08-08  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Stores.pm: fixed for new HTML format

	* lib/WWW/Search/Ebay.pm (_columns): fixed for new HTML format

	* lib/WWW/Search/Ebay/BySellerID.pm (_columns): fixed for new HTML format

2009-02-22  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed undef warning
	(_get_result_count_elements): added element for ::Category search

2009-01-21  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Completed/Category.pm: new module

2009-01-19  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Category.pm: new backend

2009-01-18  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): mark item as "sold" if ended and bidded (fix for Ebay::Completed)

2008-11-10  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed patterns for detecting spell-checked query

2008-11-09  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed "infinite" looping of page requests

2008-09-06  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_get_result_count_elements): added pattern for new motors layout
	(_result_count_pattern): match commas in result count!
	(_parse_tree): delete commas from result_count

2008-08-10  Kingpin  <Martin@BLUEMAX>
