@@ -4,7 +4,7 @@
       "Martin 'Kingpin' Thurn, C<mthurn at cpan.org>, L<http://tinyurl.com/nn67z>."
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Module::Install version 1.06, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Module::Install version 1.06, CPAN::Meta::Converter version 2.131560",
    "license" : [
       "perl_5"
    ],
@@ -27,7 +27,7 @@
             "ExtUtils::MakeMaker" : "6.36",
             "IO::Capture::Stderr" : "0",
             "Test::More" : "0",
-            "WWW::Search::Test" : "2.265"
+            "WWW::Search::Test" : "2.29"
          }
       },
       "configure" : {
@@ -55,6 +55,6 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "3.025",
+   "version" : "3.026",
    "x_module_name" : "WWW::Search::Ebay"
 }
